[package]
name = "mikrosdk"
version = "0.1.1"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true
panic = "abort"


[profile.dev]
opt-level = 0 
lto = false
panic = "abort"


[dependencies]

cortex-m = "0.7.7"      # Access to the generic ARM peripherals
cortex-m-rt = "0.7.5"  # Startup code for the ARM Core
panic-halt = "1.0.0"    # Panic handler

drv_name = {path = "drv/lib/drv_name"}
drv_port = {path = "drv/lib/drv_port"}
drv_digital_in = {path = "drv/lib/drv_digital_in"}
drv_digital_out = {path = "drv/lib/drv_digital_out"}
drv_analog_in = {path = "drv/lib/drv_analog_in"}
drv_i2c_master = {path = "drv/lib/drv_i2c_master"}
system = {path = "core/system"}


hal_spi_master = {path = "hal/lib/spi"}
hal_ll_spi_master = {path = "hal_ll/spi/hal_ll_spi_master"}

[features]
