[package]
name = "mikrosdk"
version = "0.1.1"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true
panic = "abort"


[profile.dev]
opt-level = 0 
lto = false
panic = "abort"


[dependencies]

panic-halt = "1.0.0"    # Panic handler

drv_name = {path = "drv/lib/drv_name"}
drv_port = {path = "drv/lib/drv_port"}
drv_digital_in = {path = "drv/lib/drv_digital_in"}
drv_digital_out = {path = "drv/lib/drv_digital_out"}
drv_analog_in = {path = "drv/lib/drv_analog_in"}
drv_i2c_master = {path = "drv/lib/drv_i2c_master"}
drv_spi_master = {path = "drv/lib/drv_spi_master"}
drv_pwm = {path = "drv/lib/drv_pwm"}
drv_uart = {path = "drv/lib/drv_uart"}
system = {path = "core/system"}
interrupt = {path = "core/interrupt"}
ring = {path = "platform/ring"}


hal_uart = {path = "hal/lib/uart"}
hal_ll_uart = {path = "hal_ll/uart/hal_ll_uart"}

[features]
