[package]
name = "system"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
common_header = { path = "../common_header"}
mcu_header = { path = "../mcu_header"}
system_reset = { path = "../system_reset" }