[package]
name = "mcu_definition"
version = "0.1.1"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_pin_names = {path = "../../hal_ll/hal_ll_pin_names"}

[features]

adc = []
i2c = []
spi = []
tim = []
uart = []

adc1 = ["adc1_a0_c0","adc1_a1_c1","adc1_a2_c2","adc1_a3_c3","adc1_a4_c4","adc1_a5_c5","adc1_a6_c6","adc1_a7_c7","adc1_b0_c8","adc1_b1_c9","adc1_c0_c10","adc1_c1_c11","adc1_c2_c12","adc1_c3_c13","adc1_c4_c14","adc1_c5_c15"]

adc1_a0_c0 = []
adc1_a1_c1 = []
adc1_a2_c2 = []
adc1_a3_c3 = []
adc1_a4_c4 = []
adc1_a5_c5 = []
adc1_a6_c6 = []
adc1_a7_c7 = []
adc1_b0_c8 = []
adc1_b1_c9 = []
adc1_c0_c10 = []
adc1_c1_c11 = []
adc1_c2_c12 = []
adc1_c3_c13 = []
adc1_c4_c14 = []
adc1_c5_c15 = []

adc2 = ["adc2_a0_c0","adc2_a1_c1","adc2_a2_c2","adc2_a3_c3","adc2_a4_c4","adc2_a5_c5","adc2_a6_c6","adc2_a7_c7","adc2_b0_c8","adc2_b1_c9","adc2_c0_c10","adc2_c1_c11","adc2_c2_c12","adc2_c3_c13","adc2_c4_c14","adc2_c5_c15"]

adc2_a0_c0 = []
adc2_a1_c1 = []
adc2_a2_c2 = []
adc2_a3_c3 = []
adc2_a4_c4 = []
adc2_a5_c5 = []
adc2_a6_c6 = []
adc2_a7_c7 = []
adc2_b0_c8 = []
adc2_b1_c9 = []
adc2_c0_c10 = []
adc2_c1_c11 = []
adc2_c2_c12 = []
adc2_c3_c13 = []
adc2_c4_c14 = []
adc2_c5_c15 = []


adc3 = ["adc3_a0_c0","adc3_a1_c1","adc3_a2_c2","adc3_a3_c3","adc3_f6_c4","adc3_f7_c5","adc3_f8_c6","adc3_f9_c7","adc3_f10_c8","adc3_f3_c9","adc3_c0_c10","adc3_c1_c11","adc3_c2_c12","adc3_c3_c13","adc3_f4_c14","adc3_f5_c15"]

adc3_a0_c0 = []
adc3_a1_c1 = []
adc3_a2_c2 = []
adc3_a3_c3 = []
adc3_f6_c4 = []
adc3_f7_c5 = []
adc3_f8_c6 = []
adc3_f9_c7 = []
adc3_f10_c8 = []
adc3_f3_c9 = []
adc3_c0_c10 = []
adc3_c1_c11 = []
adc3_c2_c12 = []
adc3_c3_c13 = []
adc3_f4_c14 = []
adc3_f5_c15 = []


i2c1 = ["i2c1_scl_b6_af4","i2c1_scl_b8_af4","i2c1_sda_b7_af4","i2c1_sda_b9_af4"]

i2c1_scl_b6_af4 = []
i2c1_scl_b8_af4 = []

i2c1_sda_b7_af4 = []
i2c1_sda_b9_af4 = []


i2c2 = ["i2c2_scl_b10_af4","i2c2_scl_f1_af4","i2c2_sda_b11_af4","i2c2_sda_f0_af4"]

i2c2_scl_b10_af4 = []
i2c2_scl_f1_af4 = []
i2c2_scl_h4_af4 = []

i2c2_sda_b3_af9 = []
i2c2_sda_b9_af9 = []
i2c2_sda_b11_af4 = []
i2c2_sda_f0_af4 = []
i2c2_sda_h5_af4 = []


i2c3 = ["i2c3_scl_a8_af4","i2c3_sda_c9_af4"]

i2c3_scl_a8_af4 = []
i2c3_scl_h7_af4 = []

i2c3_sda_b4_af9 = []
i2c3_sda_b8_af9 = []
i2c3_sda_c9_af4 = []
i2c3_sda_h8_af4 = []


spi1 = ["spi1_sck_a5_af5","spi1_miso_a6_af5","spi1_mosi_a7_af5","spi1_sck_b3_af5","spi1_miso_b4_af5","spi1_mosi_b5_af5"]

spi1_sck_a5_af5 = []
spi1_sck_b3_af5 = []

spi1_miso_a6_af5 = []
spi1_miso_b4_af5 = []

spi1_mosi_a7_af5 = []
spi1_mosi_b5_af5 = []


spi2 = ["spi2_sck_b10_af5","spi2_sck_b13_af5","spi2_miso_b14_af5","spi2_mosi_b15_af5","spi2_miso_c2_af5","spi2_mosi_c3_af5","spi2_sck_d3_af5"]

spi2_sck_a9_af5 = []
spi2_sck_b10_af5 = []
spi2_sck_b13_af5 = []
spi2_sck_c7_af5 = []
spi2_sck_d3_af5 = []
spi2_sck_i1_af5 = []

spi2_miso_b14_af5 = []
spi2_miso_c2_af5 = []
spi2_miso_i2_af5 = []

spi2_mosi_b15_af5 = []
spi2_mosi_c1_af5 = []
spi2_mosi_c3_af5 = []
spi2_mosi_i3_af5 = []


spi3 = ["spi3_mosi_d6_af5","spi3_miso_b4_af6","spi3_mosi_b5_af6","spi3_sck_c10_af6","spi3_miso_c11_af6","spi3_mosi_c12_af6"]

spi3_sck_b3_af6 = []
spi3_sck_c10_af6 = []
spi3_sck_b12_af7 = []

spi3_miso_b4_af6 = []
spi3_miso_c11_af6 = []

spi3_mosi_d6_af5 = []
spi3_mosi_b5_af6 = []
spi3_mosi_c12_af6 = []


spi4 = ["spi4_sck_e2_af5","spi4_miso_e5_af5","spi4_mosi_e6_af5","spi4_sck_e12_af5","spi4_miso_e13_af5","spi4_mosi_e14_af5"]

spi4_sck_e2_af5 = []
spi4_sck_e12_af5 = []
spi4_sck_b13_af6 = []

spi4_miso_e5_af5 = []
spi4_miso_e13_af5 = []
spi4_miso_a11_af6 = []

spi4_mosi_e6_af5 = []
spi4_mosi_a1_af5 = []
spi4_mosi_e14_af5 = []


spi5 = ["spi5_sck_f7_af5","spi5_miso_f8_af5","spi5_mosi_f9_af5","spi5_mosi_f11_af5"]

spi5_sck_f7_af5 = []
spi5_sck_h6_af5 = []
spi5_sck_b0_af6 = []
spi5_sck_e2_af6 = []
spi5_sck_e12_af6 = []

spi5_miso_f8_af5 = []
spi5_miso_h7_af5 = []
spi5_miso_a12_af6 = []
spi5_miso_e5_af6 = []
spi5_miso_e13_af6 = []

spi5_mosi_f9_af5 = []
spi5_mosi_f11_af5 = []
spi5_mosi_a10_af6 = []
spi5_mosi_e6_af6 = []
spi5_mosi_e14_af6 = []


spi6 = ["spi6_miso_g12_af5","spi6_sck_g13_af5","spi6_mosi_g14_af5"]

spi6_sck_g13_af5 = []

spi6_miso_g12_af5 = []

spi6_mosi_g14_af5 = []


tim1 = ["tim1_ch1n_a7_af1","tim1_ch1_a8_af1","tim1_ch2_a9_af1","tim1_ch3_a10_af1","tim1_ch4_a11_af1","tim1_ch2n_b0_af1","tim1_ch3n_b1_af1","tim1_ch1n_b13_af1","tim1_ch2n_b14_af1","tim1_ch3n_b15_af1","tim1_ch1n_e8_af1","tim1_ch1_e9_af1","tim1_ch2n_e10_af1","tim1_ch2_e11_af1","tim1_ch3n_e12_af1","tim1_ch3_e13_af1","tim1_ch4_e14_af1"]

tim1_ch1n_a7_af1 = []
tim1_ch1_a8_af1 = []
tim1_ch2_a9_af1 = []
tim1_ch3_a10_af1 = []
tim1_ch4_a11_af1 = []
tim1_ch2n_b0_af1 = []
tim1_ch3n_b1_af1 = []
tim1_ch1n_b13_af1 = []
tim1_ch2n_b14_af1 = []
tim1_ch3n_b15_af1 = []
tim1_ch1n_e8_af1 = []
tim1_ch1_e9_af1 = []
tim1_ch2n_e10_af1 = []
tim1_ch2_e11_af1 = []
tim1_ch3n_e12_af1 = []
tim1_ch3_e13_af1 = []
tim1_ch4_e14_af1 = []

tim2 = ["tim2_ch1_a0_af1","tim2_ch2_a1_af1","tim2_ch3_a2_af1","tim2_ch4_a3_af1","tim2_ch1_a5_af1","tim2_ch1_a15_af1","tim2_ch2_b3_af1","tim2_ch3_b10_af1","tim2_ch4_b11_af1"]

tim2_ch1_a0_af1 = []
tim2_ch2_a1_af1 = []
tim2_ch3_a2_af1 = []
tim2_ch4_a3_af1 = []
tim2_ch1_a5_af1 = []
tim2_ch1_a15_af1 = []
tim2_ch2_b3_af1 = []
tim2_ch3_b10_af1 = []
tim2_ch4_b11_af1 = []

tim3 = ["tim3_ch1_a6_af2","tim3_ch1_b4_af2","tim3_ch1_c6_af2","tim3_ch2_a7_af2","tim3_ch2_b5_af2","tim3_ch2_c7_af2","tim3_ch3_b0_af2","tim3_ch3_c8_af2","tim3_ch4_b1_af2","tim3_ch4_c9_af2"]

tim3_ch1_a6_af2 = []
tim3_ch1_b4_af2 = []
tim3_ch1_c6_af2 = []
tim3_ch2_a7_af2 = []
tim3_ch2_b5_af2 = []
tim3_ch2_c7_af2 = []
tim3_ch3_b0_af2 = []
tim3_ch3_c8_af2 = []
tim3_ch4_b1_af2 = []
tim3_ch4_c9_af2 = []

tim4 = ["tim4_ch1_b6_af2","tim4_ch1_d12_af2","tim4_ch2_b7_af2","tim4_ch2_d13_af2","tim4_ch3_b8_af2","tim4_ch3_d14_af2","tim4_ch4_b9_af2","tim4_ch4_d15_af2"]

tim4_ch1_b6_af2 = []
tim4_ch2_b7_af2 = []
tim4_ch3_b8_af2 = []
tim4_ch4_b9_af2 = []
tim4_ch1_d12_af2 = []
tim4_ch2_d13_af2 = []
tim4_ch3_d14_af2 = []
tim4_ch4_d15_af2 = []

tim5 = ["tim5_ch1_a0_af2","tim5_ch2_a1_af2","tim5_ch3_a2_af2","tim5_ch4_a3_af2"]

tim5_ch1_a0_af2 = []
tim5_ch2_a1_af2 = []
tim5_ch3_a2_af2 = []
tim5_ch4_a3_af2 = []

tim8 = ["tim8_ch1_c6_af3","tim8_ch1n_a5_af3","tim8_ch1n_a7_af3","tim8_ch2_c7_af3","tim8_ch2n_b0_af3","tim8_ch2n_b14_af3","tim8_ch3_c8_af3","tim8_ch3n_b1_af3","tim8_ch3n_b15_af3","tim8_ch4_c9_af3"]

tim8_ch1_c6_af3 = []
tim8_ch1n_a5_af3 = []
tim8_ch1n_a7_af3 = []
tim8_ch2_c7_af3 = []
tim8_ch2n_b0_af3 = []
tim8_ch2n_b14_af3 = []
tim8_ch3_c8_af3 = []
tim8_ch3n_b1_af3 = []
tim8_ch3n_b15_af3 = []
tim8_ch4_c9_af3 = []
tim8_ch1_i5_af3 = []                  
tim8_ch3_i7_af3 = []

tim9 = ["tim9_ch1_a2_af3","tim9_ch1_e5_af3","tim9_ch2_a3_af3","tim9_ch2_e6_af3"]

tim9_ch1_a2_af3 = []
tim9_ch2_a3_af3 = []
tim9_ch1_e5_af3 = []
tim9_ch2_e6_af3 = []

tim10 = ["tim10_ch1_b8_af3","tim10_ch1_f6_af3"]

tim10_ch1_b8_af3 = []
tim10_ch1_f6_af3 = []

tim11 = ["tim11_ch1_b9_af3","tim11_ch1_f7_af3"]

tim11_ch1_b9_af3 = []
tim11_ch1_f7_af3 = []

tim12 = ["tim12_ch1_b14_af9","tim12_ch2_b15_af9"]

tim12_ch1_b14_af9 = []
tim12_ch2_b15_af9 = []
tim12_ch1_h6_af9 = []

tim13 = ["tim13_ch1_a6_af9","tim13_ch1_f8_af9"]

tim13_ch1_a6_af9 = []
tim13_ch1_f8_af9 = []

tim14 = ["tim14_ch1_a7_af9","tim14_ch1_f9_af9"]

tim14_ch1_a7_af9 = []
tim14_ch1_f9_af9 = []


uart1 = ["uart1_rx_a10_af7","uart1_rx_b7_af7","uart1_tx_a9_af7","uart1_tx_b6_af7"]

uart1_rx_a10_af7 = []
uart1_rx_b3_af7 = []
uart1_rx_b7_af7 = []

uart1_tx_a15_af7 = []
uart1_tx_a9_af7 = []
uart1_tx_b6_af7 = []

uart2 = ["uart2_rx_a3_af7","uart2_rx_d6_af7","uart2_tx_a2_af7","uart2_tx_d5_af7"]

uart2_rx_a3_af7 = []
uart2_rx_d6_af7 = []

uart2_tx_a2_af7 = []
uart2_tx_d5_af7 = []

uart3 = ["uart3_rx_b11_af7","uart3_rx_c11_af7","uart3_rx_d9_af7","uart3_tx_b10_af7","uart3_tx_c10_af7","uart3_tx_d8_af7"]

uart3_rx_b11_af7 = []
uart3_rx_c5_af7 = []
uart3_rx_c11_af7 = []
uart3_rx_d9_af7 = []

uart3_tx_b10_af7 = []
uart3_tx_c10_af7 = []
uart3_tx_d8_af7 = []

uart4 = ["uart4_rx_a1_af8","uart4_rx_c11_af8","uart4_tx_a0_af8","uart4_tx_c10_af8"]

uart4_rx_a1_af8 = []
uart4_rx_c11_af8 = []

uart4_tx_a0_af8 = []
uart4_tx_c10_af8 = []

uart5 = ["uart5_rx_d2_af8","uart5_tx_c12_af8"]

uart5_rx_d2_af8 = []

uart5_tx_c12_af8 = []

uart6 = ["uart6_rx_c7_af8","uart6_rx_g9_af8","uart6_tx_c6_af8","uart6_tx_g14_af8"]

uart6_rx_a12_af8 = []
uart6_rx_c7_af8 = []
uart6_rx_g9_af8 = []

uart6_tx_a11_af8 = []
uart6_tx_c6_af8 = []
uart6_tx_g14_af8 = []

uart7 = ["uart7_rx_e7_af8","uart7_rx_f6_af8","uart7_tx_e8_af8","uart7_tx_f7_af8"]

uart7_rx_e7_af8 = []
uart7_rx_f6_af8 = []

uart7_tx_e8_af8 = []
uart7_tx_f7_af8 = []

uart8 = ["uart8_rx_e0_af8","uart8_tx_e1_af8"]

uart8_rx_e0_af8 = []

uart8_tx_e1_af8 = []
