[package]
name = "hal_ll_pin_names"
version = "0.1.1"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target_names = {path = "../hal_ll_target_names"}
mcu = { path = "../../core/mcu"}


[features]
