[package]
name = "hal_ll_pin_names"
version = "0.1.1"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target_names = {path = "../hal_ll_target_names"}
mcu_definition = {path = "../../family_definitions/stm/f4"}


[features]
gpioa = ["mcu_definition/gpioa"]
gpiob = ["mcu_definition/gpiob"]
gpioc = ["mcu_definition/gpioc"]
gpiod = ["mcu_definition/gpiod"]
gpioe = ["mcu_definition/gpioe"]
gpiof = ["mcu_definition/gpiof"]
gpiog = ["mcu_definition/gpiog"]
gpioh = ["mcu_definition/gpioh"]
gpioi = ["mcu_definition/gpioi"]
gpioj = ["mcu_definition/gpioj"]
gpiok = ["mcu_definition/gpiok"]