[package]
name = "hal_ll_target"
version = "0.1.1"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_pin_names = {path = "../hal_ll_pin_names"}
bit_control = {path = "../../core/bit_control"}


[features]
gpioa = ["hal_ll_pin_names/gpioa"]
gpiob = ["hal_ll_pin_names/gpiob"]
gpioc = ["hal_ll_pin_names/gpioc"]
gpiod = ["hal_ll_pin_names/gpiod"]
gpioe = ["hal_ll_pin_names/gpioe"]
gpiof = ["hal_ll_pin_names/gpiof"]
gpiog = ["hal_ll_pin_names/gpiog"]
gpioh = ["hal_ll_pin_names/gpioh"]
gpioi = ["hal_ll_pin_names/gpioi"]
gpioj = ["hal_ll_pin_names/gpioj"]
gpiok = ["hal_ll_pin_names/gpiok"]