[package]
name = "drv_pwm"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
drv_name = {path = "../drv_name"}
hal_pwm = {path = "../../../hal/lib/pwm"}