[package]
name = "hal_adc"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_adc = { path = "../../../hal_ll/adc/hal_ll_adc" }
hal_target = { path = "../../interface"}

[features]

adc = ["hal_ll_adc/adc"]