[package]
name = "hal_adc"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll = { path = "../../../hal_ll" }
hal_target = { path = "../../interface"}

[features]
default = ["adc"]
adc = ["hal_ll/adc"]