[package]
name = "hal_one_wire"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_one_wire = { path = "../../../hal_ll/one_wire/hal_ll_one_wire" }
hal_target = { path = "../../interface"}