[package]
name = "hal_spi_master"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll = { path = "../../../hal_ll" }
hal_target = { path = "../../interface"}
hal_gpio = { path = "../gpio"}
system = {path = "../../../core/system"}

[features]
default = ["spi"]
spi = ["hal_ll/spi"]