[package]
name = "hal_uart"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_uart = { path = "../../../hal_ll/uart/hal_ll_uart" }
hal_target = { path = "../../interface"}
hal_gpio = { path = "../gpio"}
system = {path = "../../../core/system"}
interrupt = {path = "../../../core/interrupt"}
ring = {path = "../../../platform/ring"}