[package]
name = "hal_ll_adc"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target = {path = "../../hal_ll_target"}
hal_ll_gpio_port = {path = "../../gpio/hal_ll_gpio_port"}

#path must be adapted according to the family
mcu_definition = {path = "../../../family_definitions/f4"}

system = {path = "../../../core/system"}


[features]
default = ["adc1", "adc2", "adc3"]
adc = ["mcu_definition/adc"]
adc1 = ["mcu_definition/adc1"]
adc2 = ["mcu_definition/adc2"]
adc3 = ["mcu_definition/adc3"]