[package]
name = "hal_ll_i2c_master"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target = {path = "../../hal_ll_target"}
hal_ll_gpio = {path = "../../gpio/hal_ll_gpio"}

#path must be adapted according to the family
mcu_definition = {path = "../../../family_definitions/f4"}

system = {path = "../../../core/system"}

[features]
i2c = ["mcu_definition/i2c"]

i2c1 = ["mcu_definition/i2c1"]
i2c2 = ["mcu_definition/i2c2"]
i2c3 = ["mcu_definition/i2c3"]