[package]
name = "hal_ll_i2c_pin_map"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_pin_names = {path = "../../hal_ll_pin_names"}

[features]