[package]
name = "hal_ll_spi_master"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target = {path = "../../hal_ll_target"}
hal_ll_gpio = {path = "../../gpio/hal_ll_gpio"}

mcu_definition = {path = "../../../family_definitions/f4"}

system = {path = "../../../core/system"}

[features]
default = ["spi1", "spi2", "spi3", "spi4", "spi5", "spi6", "spi"]

spi = ["mcu_definition/spi"]

spi1 = ["mcu_definition/spi1"]
spi2 = ["mcu_definition/spi2"]
spi3 = ["mcu_definition/spi3"]
spi4 = ["mcu_definition/spi4"]
spi5 = ["mcu_definition/spi5"]
spi6 = ["mcu_definition/spi6"]