[package]
name = "hal_ll_tim"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target = {path = "../../hal_ll_target"}
hal_ll_gpio = {path = "../../gpio/hal_ll_gpio"}

mcu_definition = {path = "../../../family_definitions/f4"}

system = {path = "../../../core/system"}

[features]
tim = ["mcu_definition/tim"]

tim1 = ["mcu_definition/tim1"]
tim2 = ["mcu_definition/tim2"]
tim3 = ["mcu_definition/tim3"]
tim4 = ["mcu_definition/tim4"]
tim5 = ["mcu_definition/tim5"]
tim8 = ["mcu_definition/tim8"]
tim9 = ["mcu_definition/tim9"]
tim10 = ["mcu_definition/tim10"]
tim11 = ["mcu_definition/tim11"]
tim12 = ["mcu_definition/tim12"]
tim13 = ["mcu_definition/tim13"]
tim14 = ["mcu_definition/tim14"]