[package]
name = "hal_ll_uart"
version = "0.1.0"
edition = "2024"
author =  ["Leon Besnie leon.besnie@reseau.eseo.fr"]


[profile.release]
opt-level = 'z' 
lto = true


[profile.dev]
opt-level = 0 
lto = false  


[dependencies]
hal_ll_target = {path = "../../hal_ll_target"}
hal_ll_gpio = {path = "../../gpio/hal_ll_gpio"}
hal_ll_uart_pin_map = {path = "../hal_ll_uart_pin_map"}
system = {path = "../../../core/system"}
interrupt = {path = "../../../core/interrupt"}

[features]